# clashpoint

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  START_GUIDE.md  start.sh  stop.sh  test.rest
ai_judge_service/: README.md  ai_judge_service.db  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt
ai_judge_service/alembic/: env.py
ai_judge_service/app/: __init__.py  app_factory.py  b3_consistency_gate.py  b3_report_collision_stress.py  callback_client.py  compliance_guard.py  consistency_report_archive.py  dispatch_controller.py  lexical_retriever.py  m7_acceptance_gate.py  main.py  milvus_indexer.py  models.py  openai_judge.py  openai_judge_client.py  openai_judge_pipeline.py  phase_pipeline.py  rag_eval.py  rag_profiles.py  rag_retriever.py  reranker_engine.py  runtime_errors.py  runtime_orchestrator.py  runtime_policy.py  runtime_provider.py  runtime_rag.py  runtime_types.py  scoring.py  scoring_core.py  settings.py  style_mode.py  token_budget.py  trace_store.py  trace_store_boundaries.py  wiring.py
ai_judge_service/scripts/: archive_consistency_reports.py  artifact_store_healthcheck.py  b3_consistency_gate.py  b3_report_collision_stress.py  export_requirements.sh  import_knowledge_to_milvus.py  rag_eval_baseline.py  run_consistency_maintenance_local.sh  run_quality_gate.sh
ai_judge_service/tests/: app_factory_test_helpers.py  test_agent_runtime.py  test_app_factory.py  test_app_factory_alert_routes.py  test_app_factory_assistant_routes.py  test_app_factory_case_read_routes.py  test_app_factory_command_dispatch_routes.py  test_app_factory_fairness_routes.py  test_app_factory_ops_panel_routes.py  test_app_factory_registry_routes.py  test_app_factory_replay_receipt_routes.py  test_app_factory_review_routes.py  test_app_factory_smoke.py  test_app_factory_trust_attestation_routes.py  test_app_factory_trust_challenge_routes.py  test_artifact_store.py  test_assistant_advisory_prompt_output.py  test_assistant_agent_routes.py  test_b3_consistency_gate.py  test_b3_report_collision_stress.py  test_bootstrap_callback_helpers.py  test_bootstrap_case_read_helpers.py  test_bootstrap_fairness_helpers.py  test_bootstrap_final_report_helpers.py  test_bootstrap_ops_panel_replay_payload_helpers.py  test_bootstrap_registry_route_helpers.py  test_bootstrap_replay_dependencies.py  test_bootstrap_review_alert_trust_payload_helpers.py  test_bootstrap_review_trust_helpers.py  test_bootstrap_route_dependencies.py  test_bootstrap_route_guard_helpers.py  test_bootstrap_runtime_ready_helpers.py  test_bootstrap_trust_ops_dependencies.py  test_bootstrap_workflow_state_helpers.py  test_bootstrap_workflow_trace_store_helpers.py  test_case_overview_contract.py  test_case_read_routes.py  test_compliance_guard.py  test_consistency_report_archive.py  (+85 more)
npc_service/: README.md  pyproject.toml
(+3246 files in other folders)
