[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "echoisle-npc-service"
version = "0.1.0"
description = "EchoIsle virtual judge NPC service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.135.1",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "uvicorn==0.42.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
